test/Fail/Issue1145b.err
Issue1145b.agda:7,11-11
Issue1145b.agda:7,11: Parse error
:<ERROR>
 Set          -- Bad, should f...
